--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,8 @@
     "axios": "^0.24.0",
     "element-ui": "^2.15.6",
     "mysql2": "^2.3.3",
+    "nprogress": "^0.2.0",
+    "relation-graph": "^1.1.0",
     "sequelize": "^6.12.2",
     "vue": "^2.5.2",
     "vue-resource": "^1.5.3",
@@ -50,7 +52,7 @@
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
+    "eslint-plugin-vue": "^4.7.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
@@ -59,6 +61,7 @@
     "jest-serializer-vue": "^0.3.0",
     "nightwatch": "^0.9.12",
     "node-notifier": "^5.1.2",
+    "node-sass": "^7.0.0",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
@@ -66,6 +69,7 @@
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
     "rimraf": "^2.6.0",
+    "sass-loader": "^12.4.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
