--- a/vue-admin-template-master/package.json
+++ b/vue-admin-template-master/package.json
@@ -21,6 +21,7 @@
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
+    "relation-graph": "^1.1.0",
     "vue": "2.6.10",
     "vue-resource": "^1.5.3",
     "vue-router": "3.0.6",
