--- a/vue-admin-template-master/package.json
+++ b/vue-admin-template-master/package.json
@@ -23,6 +23,8 @@
     "path-to-regexp": "2.4.0",
     "relation-graph": "^1.1.0",
     "vue": "2.6.10",
+    "vue-circle-menu": "^1.1.1",
+    "vue-quick-menu": "^1.0.7",
     "vue-resource": "^1.5.3",
     "vue-router": "3.0.6",
     "vuex": "3.1.0"
@@ -42,6 +44,8 @@
     "eslint": "6.7.2",
     "eslint-plugin-vue": "6.2.2",
     "html-webpack-plugin": "3.2.0",
+    "less": "^3.0.0",
+    "less-loader": "^5.0.0",
     "mockjs": "1.0.1-beta3",
     "runjs": "4.3.2",
     "sass": "1.26.8",
@@ -50,6 +54,7 @@
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
+    "vis": "^4.21.0-EOL",
     "vue-template-compiler": "2.6.10"
   },
   "browserslist": [
